# src/controllers/movie.ctrl.js
@@ -1,55 +1,123 @@
-const remove = require('lodash/remove')
+const remove = require('lodash/remove');
 
-const movies = require('../data/movies.json')
-const { generateId } = require('../utils')
-const { searchMovies, filterMovies, sortMovies, paginateMovies } = require('../utils/search')
+let movies = [];
+const transactions = require('./transactions');
+
+const { generateId } = require('../utils');
+const { searchMovies, filterMovies, sortMovies, paginateMovies } = require('../utils/search');
+const { getPosterUrl } = require('../utils/get-movie-poster');
+
+const loadMovies = async () => {
+    movies = require('../data/movies.json');
+    await transactions.getTransactions(async (ta) => {
+        switch (ta.t) {
+            case 'NEW': {
+                await addMovie(ta.data);
+                break;
+            }
+
+            case 'UPD':
+            case 'IMG': {
+                await updateMovie({ ...ta.data, id: ta.id });
+                break;
+            }
+
+            case 'DEL': {
+                await deleteMovie(ta.id);
+                break;
+            }
+        }
+    });
+};
 
 const getMovies = async (query) => {
-  const foundMovies = searchMovies(movies, query)
-  const filteredMovies = filterMovies(foundMovies, query)
-  const sortedMovies = sortMovies(filteredMovies, query)
-  const paginatedMovies = paginateMovies(sortedMovies, query)
+    const foundMovies = searchMovies(movies, query);
+    const filteredMovies = filterMovies(foundMovies, query);
+    const sortedMovies = sortMovies(filteredMovies, query);
+    const paginatedMovies = paginateMovies(sortedMovies, query);
 
-  return paginatedMovies
-}
+    return paginatedMovies;
+};
 
 const getMovieById = async (movieId) => {
-  return movies.find((movie) => movie.id === movieId)
+    return movies.find((movie) => movie.id === movieId);
+};
+
+const getMoviePosterById = async (movieId) => {
+    const movieIndex = movies.findIndex((m) => m.id === movieId);
+
+    if (movieIndex < 0) {
+        console.log(`movieAPI: Movie #${movieId} not found`);
+        return null;
+    }
+
+    const posterUrl = await getPosterUrl(movieId);
+
+    const movie = movies[movieIndex];
+    if (posterUrl) {
+        movie['poster_path'] = posterUrl;
+    }
+    movies[movieIndex] = movie;
+
+    if (posterUrl) {
+        await transactions.updateMoviePoster(movieId, { poster_path: posterUrl });
+    }
+    return movie;
+};
+
+async function deleteMovie(movieId) {
+    const removedElements = remove(movies, (m) => m.id === movieId);
+
+    await transactions.deleteMovie(movieId);
+    return removedElements.length;
 }
 
-const deleteMovie = async (movieId) => {
-  const removedElements = remove(movies, (m) => m.id === movieId)
+async function addMovie(movie) {
+    const id = movie.id || generateId();
 
-  return removedElements.length
+    const newMovie = {
+        ...movie,
+        id
+    };
+
+    const movieIndex = movies.findIndex((m) => m.id === id);
+    if (movieIndex >= 0) {
+        const oldMovie = movies[movieIndex];
+        movies[movieIndex] = {
+            ...oldMovie,
+            ...newMovie
+        };
+    } else {
+        movies.push(newMovie);
+    }
+
+    await transactions.newMovie(newMovie);
+    return newMovie;
 }
 
-const addMovie = async (movie) => {
-  const newMovie = {
-    ...movie,
-    id: generateId(),
-  }
+async function updateMovie(movie) {
+    const movieIndex = movies.findIndex((m) => m.id === movie.id);
 
-  movies.push(newMovie)
+    if (movieIndex < 0) {
+        return null;
+    }
 
-  return newMovie
-}
+    const prevMovie = movies[movieIndex];
+    movies[movieIndex] = {
+        ...prevMovie,
+        ...movie
+    };
 
-const updateMovie = async (movie) => {
-  const movieIndex = movies.findIndex((m) => m.id === movie.id)
-
-  if (movieIndex < 0) {
-    return null
-  }
-
-  movies[movieIndex] = movie
-
-  return movie
+    await transactions.editMovie(movie, prevMovie);
+    return movie;
 }
 
 module.exports = {
-  getMovies,
-  getMovieById,
-  deleteMovie,
-  addMovie,
-  updateMovie,
-}
+    loadMovies,
+    getMovies,
+    getMovieById,
+    getMoviePosterById,
+    deleteMovie,
+    addMovie,
+    updateMovie
+};
